--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-icons": "^3.0.5",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "styled-components": "^3.4.6",
     "tachyons": "^4.11.1",
